fix(style): removed highlight color on mobile devices.

--- a/src/styles/scss/layout/_layout.scss
+++ b/src/styles/scss/layout/_layout.scss
@@ -3,16 +3,12 @@
 @import '../abstracts/_functions';
 @import '../abstracts/_variables';
 
-html {
-  height: 100%;
-  overflow: hidden;
-}
-
 body {
+  height: 100vh;
   color: $whiteDark;
   letter-spacing: 0.025em;
-  height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  -webkit-tap-highlight-color: transparent;
   @include mixins.primaryLinearGradient();
 }
 
